debug: external ceph cluster troubles

--- a/cluster/core/rook-ceph/operator/kustomization.yaml
+++ b/cluster/core/rook-ceph/operator/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - helm-release.yaml
   - configmap.sops.yaml
   - secret.sops.yaml
-  # - cluster-external.yaml
-  # - cephfs.yaml
-  # - storageclass.yaml
-  # - volume-snapshot-class.yaml
+  - cluster-external.yaml
+  - cephfs.yaml
+  - storageclass.yaml
+  - volume-snapshot-class.yaml
