--- a/cluster/core/rook-ceph/operator/kustomization.yaml
+++ b/cluster/core/rook-ceph/operator/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
-  # - configmap.sops.yaml
+  - configmap.sops.yaml
   - secret.sops.yaml
   - cluster-external.yaml
   - cephfs.yaml
