debug: external ceph cluster troubles

--- a/cluster/core/rook-ceph/operator/configmap.sops.yaml
+++ b/cluster/core/rook-ceph/operator/configmap.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: rook-ceph-mon-endpoints
     namespace: rook-ceph
 data:
-    data: ENC[AES256_GCM,data:55Kfwcg4PxEnPvr09q9VhlwIaTX9tpECDFpfl1N09K3rCKwEuZv3YX3V0DOU96wm0fUdHhlA9GSCG46sgVc4,iv:CzTSNUXhN00RfT5MDep4pDLRJryJG13epBuLhw1HQ+s=,tag:METdaL82qMTkroBhRbL7Jg==,type:str]
-    mapping: ENC[AES256_GCM,data:cRk=,iv:+kcEDTEDfOMSF96s74CoaxhhHbixcaGJv2IGCPX4qzE=,tag:JUyabrDEJtZJDxdg0J3EOQ==,type:str]
-    maxMonId: ENC[AES256_GCM,data:Jg==,iv:+oTiYV1c3yiEIDAC2I01NpaeDILrHey2GH7YGu92gsQ=,tag:JsVruAyUasB4avVrZ5rEXQ==,type:str]
+    data: ENC[AES256_GCM,data:ERSJzylnQabVz1D2S2H4udl68Js=,iv:7JHXeJc9uC0NyzLsconj82QIWHtlHUn89yV/X1swa3E=,tag:elV5kqMKlYXHVMdXYTUNbQ==,type:str]
+    #ENC[AES256_GCM,data:WDEmG+qfh+Au2f1yGjw=,iv:L7/tuT9dNUi+/HesgwXqN6NrD/mkZP2qduG5qj5PjBU=,tag:VCGmbp784HEs0M8kdU7kpA==,type:comment]
+    #ENC[AES256_GCM,data:wJV48CaHbNmZb8goys8=,iv:NUjIRNzELEzK6fxZVvCO5g3FFDGM5AJwlDWWIK2JlgQ=,tag:qWkOCdsiBnkl0fMFh1edXw==,type:comment]
 sops:
     kms: []
     gcp_kms:
@@ -25,8 +25,8 @@ sops:
             NmxVRGNUQ3hNMm1ITUgyd1VxY3Q5VEUK5jSCe9uc8EmO5zIREDrprrBGo3vRQQq4
             3dGFgLC5lbaXlm14x7kRtFMP1eASVRBQMyCreCa4gYkaU8RKEPpyZQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-29T21:36:53Z"
-    mac: ENC[AES256_GCM,data:X8+90iqo0iGLp82Zz7Pw7my+HVpFZNR3LIb7pUgvIzZ1OVW1POxrf4B0XQcXZBRiDm+7MSN64dCE/Zr3uG7z9dsvpO9QhbfRAfEXwQaWYqiF194wYH9R2XuHoMV7cHVdUOuGHr62c1sOD4z+L3t+2qcrKl3TlixPhx3SuIZXGy4=,iv:y6m2mHZmzcLrvWzcejZF863VCuMbjPdW0RgKDoUGYcM=,tag:yCupEW3LfSV/y5JcgD91DQ==,type:str]
+    lastmodified: "2022-03-29T21:46:52Z"
+    mac: ENC[AES256_GCM,data:ufHHNUAxyF17899LwJx72q2YF4NwPnsvOmOsGrQFEOO4UHgLz1urJtA6oZpkqXxt/V44AOWV/7WI++2mA1QEtD5Hr+K8b+19GW1mlaABy9BKz7y86GN4SezN0ArVvyLWKoo9Jq0qQ9512wN3q1YdVSRI/yuAqGq1TNcBdXWHlL0=,iv:/curY59OtLeQwHSzM68SLNYiA8SfCmPtKchncT0a1ac=,tag:GlQsChpd5BJaQeXSrTJ1Gw==,type:str]
     pgp:
         - created_at: "2022-03-22T02:22:09Z"
           enc: |
