--- a/cluster/core/rook-ceph/operator/secret.sops.yaml
+++ b/cluster/core/rook-ceph/operator/secret.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: rook-ceph-mon
     namespace: rook-ceph
 stringData:
-    admin-secret: ENC[AES256_GCM,data:P6R8ObtGf97Gfejg,iv:mA4aDc9wwq0AO8l5XzE+kd6kPPTqhYw1s+Pl97SgveQ=,tag:wQfonNMQnLkcexCbGs7Ojw==,type:str]
+    admin-secret: ENC[AES256_GCM,data:vb/KrPccQyPtaD68rs9gtEj2dKNO6hVUl0ONKIV1oH2USaSOGAZh2Q==,iv:AfkBsUvbyBgQbi1U2Y0U6bzEwVByLa3sVrWwz7tAZ4E=,tag:te1TpJG+O8GCIxnD43xXTA==,type:str]
     ceph-secret: ENC[AES256_GCM,data:7J2wPHKDPsg1C2ZzaQ+kXY//gR75CfaxX0gTIyQNwv2Np4jEGSjvvA==,iv:f2qDXIg9VcFaiDsNcMegx93wR3w3EKOEfkExq12jbU8=,tag:oypzBj+hPx0eVj3DYXWOFQ==,type:str]
     ceph-username: ENC[AES256_GCM,data:sLfj9HIe9bFicJmgZNewuDQkTOM=,iv:mpRp+5tazb9/byUGgyxN5PUJAhaiho4N612Tei4gjXk=,tag:Uq/owI1lPbltSa+gjAUoMA==,type:str]
     cluster-name: ENC[AES256_GCM,data:1sV7eHL+WcH7,iv:+lyVqBIr/TV0ik4iqptCDyc+nPH5/aGNgVjAQZcMKI8=,tag:gCfNFhkWCf1JyViC9BCMNg==,type:str]
@@ -29,8 +29,8 @@ sops:
             eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
             Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-23T14:03:09Z"
-    mac: ENC[AES256_GCM,data:R4OtJjj/foQ2t7WWZeHUokwXPFcBe16R8swmssY2mnXZh0WRZSMrAzh2M1F/k3qgxSdx6d+zXcEReGqTmoIe1GMx4tmT1aiqZRbPHTrhRRUDWkbWTbLhj23/qbLBnuJ+H4fFevpNpMt+9c0vvke8INYCS1BbqvRC7ExBGgT74+U=,iv:7nqr1pCwn3uW6/sXrySYn5vDqyeEFJLr1tRgChbzi3Y=,tag:lJfi1qMWkvjfeTOs/Qy/Uw==,type:str]
+    lastmodified: "2022-03-29T22:13:38Z"
+    mac: ENC[AES256_GCM,data:rVPWQZj5H/mALoTJJcy2tjb/+zJy7Mi0MeYU0LJg6howXy0UvTimJe4C1n7ac/BSruIMzPt/IrV5xhHFrjUQhrM6XBFkvTLIBFG7d0fUqYSilnv0p/hSd2m8ULU6HYDIJyMfA6LqSjT/M47oUIFM920Z/03jP7XMAEhHXkdFyNQ=,iv:pC34TzeNKYVoVgbFs/df/jiq6x1xo70ITQaLJ7N5zKE=,tag:i0AkBqCDpoxca6n8aFr8hQ==,type:str]
     pgp:
         - created_at: "2022-03-22T02:21:47Z"
           enc: |
@@ -81,8 +81,8 @@ sops:
             eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
             Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-23T14:03:09Z"
-    mac: ENC[AES256_GCM,data:R4OtJjj/foQ2t7WWZeHUokwXPFcBe16R8swmssY2mnXZh0WRZSMrAzh2M1F/k3qgxSdx6d+zXcEReGqTmoIe1GMx4tmT1aiqZRbPHTrhRRUDWkbWTbLhj23/qbLBnuJ+H4fFevpNpMt+9c0vvke8INYCS1BbqvRC7ExBGgT74+U=,iv:7nqr1pCwn3uW6/sXrySYn5vDqyeEFJLr1tRgChbzi3Y=,tag:lJfi1qMWkvjfeTOs/Qy/Uw==,type:str]
+    lastmodified: "2022-03-29T22:13:38Z"
+    mac: ENC[AES256_GCM,data:rVPWQZj5H/mALoTJJcy2tjb/+zJy7Mi0MeYU0LJg6howXy0UvTimJe4C1n7ac/BSruIMzPt/IrV5xhHFrjUQhrM6XBFkvTLIBFG7d0fUqYSilnv0p/hSd2m8ULU6HYDIJyMfA6LqSjT/M47oUIFM920Z/03jP7XMAEhHXkdFyNQ=,iv:pC34TzeNKYVoVgbFs/df/jiq6x1xo70ITQaLJ7N5zKE=,tag:i0AkBqCDpoxca6n8aFr8hQ==,type:str]
     pgp:
         - created_at: "2022-03-22T02:21:47Z"
           enc: |
@@ -133,8 +133,8 @@ sops:
             eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
             Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-23T14:03:09Z"
-    mac: ENC[AES256_GCM,data:R4OtJjj/foQ2t7WWZeHUokwXPFcBe16R8swmssY2mnXZh0WRZSMrAzh2M1F/k3qgxSdx6d+zXcEReGqTmoIe1GMx4tmT1aiqZRbPHTrhRRUDWkbWTbLhj23/qbLBnuJ+H4fFevpNpMt+9c0vvke8INYCS1BbqvRC7ExBGgT74+U=,iv:7nqr1pCwn3uW6/sXrySYn5vDqyeEFJLr1tRgChbzi3Y=,tag:lJfi1qMWkvjfeTOs/Qy/Uw==,type:str]
+    lastmodified: "2022-03-29T22:13:38Z"
+    mac: ENC[AES256_GCM,data:rVPWQZj5H/mALoTJJcy2tjb/+zJy7Mi0MeYU0LJg6howXy0UvTimJe4C1n7ac/BSruIMzPt/IrV5xhHFrjUQhrM6XBFkvTLIBFG7d0fUqYSilnv0p/hSd2m8ULU6HYDIJyMfA6LqSjT/M47oUIFM920Z/03jP7XMAEhHXkdFyNQ=,iv:pC34TzeNKYVoVgbFs/df/jiq6x1xo70ITQaLJ7N5zKE=,tag:i0AkBqCDpoxca6n8aFr8hQ==,type:str]
     pgp:
         - created_at: "2022-03-22T02:21:47Z"
           enc: |
@@ -185,8 +185,8 @@ sops:
             eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
             Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-23T14:03:09Z"
-    mac: ENC[AES256_GCM,data:R4OtJjj/foQ2t7WWZeHUokwXPFcBe16R8swmssY2mnXZh0WRZSMrAzh2M1F/k3qgxSdx6d+zXcEReGqTmoIe1GMx4tmT1aiqZRbPHTrhRRUDWkbWTbLhj23/qbLBnuJ+H4fFevpNpMt+9c0vvke8INYCS1BbqvRC7ExBGgT74+U=,iv:7nqr1pCwn3uW6/sXrySYn5vDqyeEFJLr1tRgChbzi3Y=,tag:lJfi1qMWkvjfeTOs/Qy/Uw==,type:str]
+    lastmodified: "2022-03-29T22:13:38Z"
+    mac: ENC[AES256_GCM,data:rVPWQZj5H/mALoTJJcy2tjb/+zJy7Mi0MeYU0LJg6howXy0UvTimJe4C1n7ac/BSruIMzPt/IrV5xhHFrjUQhrM6XBFkvTLIBFG7d0fUqYSilnv0p/hSd2m8ULU6HYDIJyMfA6LqSjT/M47oUIFM920Z/03jP7XMAEhHXkdFyNQ=,iv:pC34TzeNKYVoVgbFs/df/jiq6x1xo70ITQaLJ7N5zKE=,tag:i0AkBqCDpoxca6n8aFr8hQ==,type:str]
     pgp:
         - created_at: "2022-03-22T02:21:47Z"
           enc: |
@@ -237,8 +237,8 @@ sops:
             eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
             Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-23T14:03:09Z"
-    mac: ENC[AES256_GCM,data:R4OtJjj/foQ2t7WWZeHUokwXPFcBe16R8swmssY2mnXZh0WRZSMrAzh2M1F/k3qgxSdx6d+zXcEReGqTmoIe1GMx4tmT1aiqZRbPHTrhRRUDWkbWTbLhj23/qbLBnuJ+H4fFevpNpMt+9c0vvke8INYCS1BbqvRC7ExBGgT74+U=,iv:7nqr1pCwn3uW6/sXrySYn5vDqyeEFJLr1tRgChbzi3Y=,tag:lJfi1qMWkvjfeTOs/Qy/Uw==,type:str]
+    lastmodified: "2022-03-29T22:13:38Z"
+    mac: ENC[AES256_GCM,data:rVPWQZj5H/mALoTJJcy2tjb/+zJy7Mi0MeYU0LJg6howXy0UvTimJe4C1n7ac/BSruIMzPt/IrV5xhHFrjUQhrM6XBFkvTLIBFG7d0fUqYSilnv0p/hSd2m8ULU6HYDIJyMfA6LqSjT/M47oUIFM920Z/03jP7XMAEhHXkdFyNQ=,iv:pC34TzeNKYVoVgbFs/df/jiq6x1xo70ITQaLJ7N5zKE=,tag:i0AkBqCDpoxca6n8aFr8hQ==,type:str]
     pgp:
         - created_at: "2022-03-22T02:21:47Z"
           enc: |
