debug: external ceph cluster troubles

--- a/cluster/core/rook-ceph/operator/secret.sops.yaml
+++ b/cluster/core/rook-ceph/operator/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     namespace: rook-ceph
 stringData:
     admin-secret: ENC[AES256_GCM,data:vb/KrPccQyPtaD68rs9gtEj2dKNO6hVUl0ONKIV1oH2USaSOGAZh2Q==,iv:AfkBsUvbyBgQbi1U2Y0U6bzEwVByLa3sVrWwz7tAZ4E=,tag:te1TpJG+O8GCIxnD43xXTA==,type:str]
-    ceph-secret: ENC[AES256_GCM,data:7J2wPHKDPsg1C2ZzaQ+kXY//gR75CfaxX0gTIyQNwv2Np4jEGSjvvA==,iv:f2qDXIg9VcFaiDsNcMegx93wR3w3EKOEfkExq12jbU8=,tag:oypzBj+hPx0eVj3DYXWOFQ==,type:str]
-    ceph-username: ENC[AES256_GCM,data:sLfj9HIe9bFicJmgZNewuDQkTOM=,iv:mpRp+5tazb9/byUGgyxN5PUJAhaiho4N612Tei4gjXk=,tag:Uq/owI1lPbltSa+gjAUoMA==,type:str]
+    #ENC[AES256_GCM,data:H+kdmdja5iYMGMar7VHlfXwn/DPxjy3UBT/d4yZF8l1p+KcW1KP8G+XAc7pn2qMUbIqNjqpA,iv:6tVJM4zHBTj6S7tvQlUviotqiUG3zSKW5ccKxHt4JsQ=,tag:JA0cnMp8DEpSxlBwpY3JnA==,type:comment]
+    #ENC[AES256_GCM,data:MMpPut0jaSHNrxaJNozyk+1inwrd62jDnN205n8+dC+8xsOD,iv:a7/nBz4aDq7aw60RiuntYTtf530DXlob6v9ABD1fNyo=,tag:TnqzQlvKRn7mQZSZHX0tLw==,type:comment]
     cluster-name: ENC[AES256_GCM,data:1sV7eHL+WcH7,iv:+lyVqBIr/TV0ik4iqptCDyc+nPH5/aGNgVjAQZcMKI8=,tag:gCfNFhkWCf1JyViC9BCMNg==,type:str]
     fsid: ENC[AES256_GCM,data:G0wSwdbQcg4MGfc8tloMDugK8C0uzwy61alIDGCtFQKfDRms,iv:OYI6ccRw8zYc8msybz18MHEUh/b4IJssP7wItprXHXg=,tag:Xd9GcPjrvR+cf82SDnE0fQ==,type:str]
     mon-secret: ENC[AES256_GCM,data:eUG0mXeqfvjXLw==,iv:Vjs9sPPmmOG9+dmxBxB+S3LTzeGmwVieUSPWOVPBqCg=,tag:mI17whl+oH1L1AcbQ0KEVQ==,type:str]
@@ -29,8 +29,8 @@ sops:
             eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
             Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-29T22:13:38Z"
-    mac: ENC[AES256_GCM,data:rVPWQZj5H/mALoTJJcy2tjb/+zJy7Mi0MeYU0LJg6howXy0UvTimJe4C1n7ac/BSruIMzPt/IrV5xhHFrjUQhrM6XBFkvTLIBFG7d0fUqYSilnv0p/hSd2m8ULU6HYDIJyMfA6LqSjT/M47oUIFM920Z/03jP7XMAEhHXkdFyNQ=,iv:pC34TzeNKYVoVgbFs/df/jiq6x1xo70ITQaLJ7N5zKE=,tag:i0AkBqCDpoxca6n8aFr8hQ==,type:str]
+    lastmodified: "2022-03-29T22:15:11Z"
+    mac: ENC[AES256_GCM,data:PP/gmR4Q9fKtJqouRZF9vGEJA1ZvuSky634qj26LeAOnZiIe31oAsq8mRkEH682EoET4nwW/n5+UIUcXQhGg796yaZoQZKqRxvXGnr/iFSYtRjrQIp/tGybOYSmVo2HtV5wTR6Z3vOMj6bg4leLqOUA7hQW7Kn2vWLMgwKnN5O0=,iv:LNnPqAYQeNGE3rT4OKW+yetvubovGTpmzDx6rFezzDY=,tag:I12cvhYYgyn+hV+Bi5gNRg==,type:str]
     pgp:
         - created_at: "2022-03-22T02:21:47Z"
           enc: |
@@ -81,8 +81,8 @@ sops:
             eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
             Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-29T22:13:38Z"
-    mac: ENC[AES256_GCM,data:rVPWQZj5H/mALoTJJcy2tjb/+zJy7Mi0MeYU0LJg6howXy0UvTimJe4C1n7ac/BSruIMzPt/IrV5xhHFrjUQhrM6XBFkvTLIBFG7d0fUqYSilnv0p/hSd2m8ULU6HYDIJyMfA6LqSjT/M47oUIFM920Z/03jP7XMAEhHXkdFyNQ=,iv:pC34TzeNKYVoVgbFs/df/jiq6x1xo70ITQaLJ7N5zKE=,tag:i0AkBqCDpoxca6n8aFr8hQ==,type:str]
+    lastmodified: "2022-03-29T22:15:11Z"
+    mac: ENC[AES256_GCM,data:PP/gmR4Q9fKtJqouRZF9vGEJA1ZvuSky634qj26LeAOnZiIe31oAsq8mRkEH682EoET4nwW/n5+UIUcXQhGg796yaZoQZKqRxvXGnr/iFSYtRjrQIp/tGybOYSmVo2HtV5wTR6Z3vOMj6bg4leLqOUA7hQW7Kn2vWLMgwKnN5O0=,iv:LNnPqAYQeNGE3rT4OKW+yetvubovGTpmzDx6rFezzDY=,tag:I12cvhYYgyn+hV+Bi5gNRg==,type:str]
     pgp:
         - created_at: "2022-03-22T02:21:47Z"
           enc: |
@@ -133,8 +133,8 @@ sops:
             eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
             Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-29T22:13:38Z"
-    mac: ENC[AES256_GCM,data:rVPWQZj5H/mALoTJJcy2tjb/+zJy7Mi0MeYU0LJg6howXy0UvTimJe4C1n7ac/BSruIMzPt/IrV5xhHFrjUQhrM6XBFkvTLIBFG7d0fUqYSilnv0p/hSd2m8ULU6HYDIJyMfA6LqSjT/M47oUIFM920Z/03jP7XMAEhHXkdFyNQ=,iv:pC34TzeNKYVoVgbFs/df/jiq6x1xo70ITQaLJ7N5zKE=,tag:i0AkBqCDpoxca6n8aFr8hQ==,type:str]
+    lastmodified: "2022-03-29T22:15:11Z"
+    mac: ENC[AES256_GCM,data:PP/gmR4Q9fKtJqouRZF9vGEJA1ZvuSky634qj26LeAOnZiIe31oAsq8mRkEH682EoET4nwW/n5+UIUcXQhGg796yaZoQZKqRxvXGnr/iFSYtRjrQIp/tGybOYSmVo2HtV5wTR6Z3vOMj6bg4leLqOUA7hQW7Kn2vWLMgwKnN5O0=,iv:LNnPqAYQeNGE3rT4OKW+yetvubovGTpmzDx6rFezzDY=,tag:I12cvhYYgyn+hV+Bi5gNRg==,type:str]
     pgp:
         - created_at: "2022-03-22T02:21:47Z"
           enc: |
@@ -185,8 +185,8 @@ sops:
             eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
             Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-29T22:13:38Z"
-    mac: ENC[AES256_GCM,data:rVPWQZj5H/mALoTJJcy2tjb/+zJy7Mi0MeYU0LJg6howXy0UvTimJe4C1n7ac/BSruIMzPt/IrV5xhHFrjUQhrM6XBFkvTLIBFG7d0fUqYSilnv0p/hSd2m8ULU6HYDIJyMfA6LqSjT/M47oUIFM920Z/03jP7XMAEhHXkdFyNQ=,iv:pC34TzeNKYVoVgbFs/df/jiq6x1xo70ITQaLJ7N5zKE=,tag:i0AkBqCDpoxca6n8aFr8hQ==,type:str]
+    lastmodified: "2022-03-29T22:15:11Z"
+    mac: ENC[AES256_GCM,data:PP/gmR4Q9fKtJqouRZF9vGEJA1ZvuSky634qj26LeAOnZiIe31oAsq8mRkEH682EoET4nwW/n5+UIUcXQhGg796yaZoQZKqRxvXGnr/iFSYtRjrQIp/tGybOYSmVo2HtV5wTR6Z3vOMj6bg4leLqOUA7hQW7Kn2vWLMgwKnN5O0=,iv:LNnPqAYQeNGE3rT4OKW+yetvubovGTpmzDx6rFezzDY=,tag:I12cvhYYgyn+hV+Bi5gNRg==,type:str]
     pgp:
         - created_at: "2022-03-22T02:21:47Z"
           enc: |
@@ -237,8 +237,8 @@ sops:
             eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
             Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-29T22:13:38Z"
-    mac: ENC[AES256_GCM,data:rVPWQZj5H/mALoTJJcy2tjb/+zJy7Mi0MeYU0LJg6howXy0UvTimJe4C1n7ac/BSruIMzPt/IrV5xhHFrjUQhrM6XBFkvTLIBFG7d0fUqYSilnv0p/hSd2m8ULU6HYDIJyMfA6LqSjT/M47oUIFM920Z/03jP7XMAEhHXkdFyNQ=,iv:pC34TzeNKYVoVgbFs/df/jiq6x1xo70ITQaLJ7N5zKE=,tag:i0AkBqCDpoxca6n8aFr8hQ==,type:str]
+    lastmodified: "2022-03-29T22:15:11Z"
+    mac: ENC[AES256_GCM,data:PP/gmR4Q9fKtJqouRZF9vGEJA1ZvuSky634qj26LeAOnZiIe31oAsq8mRkEH682EoET4nwW/n5+UIUcXQhGg796yaZoQZKqRxvXGnr/iFSYtRjrQIp/tGybOYSmVo2HtV5wTR6Z3vOMj6bg4leLqOUA7hQW7Kn2vWLMgwKnN5O0=,iv:LNnPqAYQeNGE3rT4OKW+yetvubovGTpmzDx6rFezzDY=,tag:I12cvhYYgyn+hV+Bi5gNRg==,type:str]
     pgp:
         - created_at: "2022-03-22T02:21:47Z"
           enc: |
