--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   # # - kasten-io
   - kube-system
   # - media
-  # - monitoring
+  - monitoring
   - networking
   - rook-ceph
   - system-upgrade
