--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - cert-manager
   - flux-system
   # - home
-  # # - kasten-io
+  - kasten-io
   - kube-system
   # - media
   - monitoring
