--- a/cluster/apps/kasten-io/k10/profiles/kustomization.yaml
+++ b/cluster/apps/kasten-io/k10/profiles/kustomization.yaml
@@ -2,7 +2,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - k10-backups-pvc.yaml
-  - home.yaml
-  - media.yaml
-  - k10-disaster-recovery.yaml
+  # - k10-backups-pvc.yaml
+  # - home.yaml
+  # - media.yaml
+  # - k10-disaster-recovery.yaml
+  - secret.sops.yaml
+  - b2.yaml
