--- a/cluster/apps/kasten-io/k10/profiles/b2.yaml
+++ b/cluster/apps/kasten-io/k10/profiles/b2.yaml
@@ -12,7 +12,7 @@ spec:
       objectStoreType: S3
       path: "${SECRET_KASTEN_BUCKET_PATH}"
       pathType: Directory
-      region: ${SECRET_S3_REGION}"
+      region: "${SECRET_S3_REGION}"
     credential:
       secretType: AwsAccessKey
       secret:
