fix: up k10 backup timeout

--- a/cluster/apps/kasten-io/k10/helm-release.yaml
+++ b/cluster/apps/kasten-io/k10/helm-release.yaml
@@ -37,6 +37,8 @@ spec:
       tokenAuth:
         enabled: true
     clusterName: k8s
+    kanister:
+      backupTimeout: 600
     ingress:
       create: true
       class: nginx
