--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -213,7 +213,7 @@ spec:
             honor_timestamps: true
             static_configs:
               - targets:
-                  - "opnsense.${SECRET_PRIVATE_DOMAIN}:9153"
+                  - "opnsense:9153"
           # - job_name: minio
           #   honor_timestamps: true
           #   metrics_path: /minio/v2/metrics/cluster
@@ -224,7 +224,7 @@ spec:
             honor_timestamps: true
             static_configs:
               - targets:
-                  - "opnsense.${SECRET_PRIVATE_DOMAIN}:9100"
+                  - "opnsense:9100"
           # - job_name: postgresql
           #   honor_timestamps: true
           #   static_configs:
