--- a/cluster/apps/monitoring/blackbox-exporter/helm-release.yaml
+++ b/cluster/apps/monitoring/blackbox-exporter/helm-release.yaml
@@ -58,6 +58,8 @@ spec:
         - module: http_2xx
           name: opnsense-http
           url: "https://opnsense.localdomain/"
+          tls_config:
+            insecure_skip_verify: true
         - module: http_2xx
           name: unifi-http
           url: "https://unifi.${SECRET_UNIFI_DOMAIN}"
