--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -207,7 +207,7 @@ spec:
             honor_timestamps: true
             static_configs:
               - targets:
-                  - "opnsense:9153"
+                  - "opnsense.localdomain:9153"
           # - job_name: minio
           #   honor_timestamps: true
           #   metrics_path: /minio/v2/metrics/cluster
@@ -218,7 +218,7 @@ spec:
             honor_timestamps: true
             static_configs:
               - targets:
-                  - "opnsense:9100"
+                  - "opnsense.localdomain:9100"
           # - job_name: postgresql
           #   honor_timestamps: true
           #   static_configs:
