feat: really add vector

--- a/ansible/router/roles/vector.router/tasks/main.yml
+++ b/ansible/router/roles/vector.router/tasks/main.yml
@@ -14,6 +14,6 @@
   tags:
     - geoip
 
-# - import_tasks: vector.yml
-#   tags:
-#     - vector
+- import_tasks: vector.yml
+  tags:
+    - vector
