--- a/ansible/router/roles/vector.router/tasks/vector.yml
+++ b/ansible/router/roles/vector.router/tasks/vector.yml
@@ -1,5 +1,4 @@
 ---
-
 # - name: Create Vector log rotation config
 #   ansible.builtin.template:
 #     src: vector/vector-newsyslog.conf.j2
@@ -9,10 +8,10 @@
 - block:
     - name: Copy Vector binary into place
       ansible.builtin.copy:
-        src: /root/Documents/vector/target/release/vector
+        src: ../files/vector
         dest: /usr/local/sbin/vector
         mode: 0755
-        remote_src: true
+        # remote_src: true
     - name: Create Vector config
       ansible.builtin.template:
         src: vector/vector.yaml.j2
