--- a/cluster/crds/kustomization.yaml
+++ b/cluster/crds/kustomization.yaml
@@ -3,8 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - cert-manager
-  - external-dns
   - external-snapshotter
   - kube-prometheus-stack
-  - tf-controller
+  # TODO: [rook-ceph] Enable CRDs on next rebuild
   # - rook-ceph
