feat: add cephfs mounts to host

--- a/ansible/kubernetes/roles/os.kubernetes/tasks/main.yml
+++ b/ansible/kubernetes/roles/os.kubernetes/tasks/main.yml
@@ -19,6 +19,10 @@
   tags:
     - filesystem
 
+- import_tasks: ceph.yml
+  tags:
+    - ceph
+
 - import_tasks: security.yml
   tags:
     - security
