--- a/ansible/kubernetes/roles/os.kubernetes/vars/main.yml
+++ b/ansible/kubernetes/roles/os.kubernetes/vars/main.yml
@@ -18,6 +18,7 @@ os_packages_install:
   - software-properties-common
   - unzip
   - qemu-guest-agent
+  - ceph-common
 os_packages_remove:
   - apparmor
   - apport
