--- a/ansible/kubernetes/roles/os.kubernetes/tasks/packages.yml
+++ b/ansible/kubernetes/roles/os.kubernetes/tasks/packages.yml
@@ -21,10 +21,16 @@
   retries: 5
   until: apt_upgrade is success
 
+- name: Add APT signing key for Ceph
+  ansible.builtin.apt_key:
+    url: https://download.ceph.com/keys/release.asc
+    state: present
+
 - name: Add Ceph Pacific repo
   ansible.builtin.apt_repository:
     repo: deb https://download.ceph.com/debian-pacific/ {{ ansible_distribution_release }} main
     state: present
+    filename: ceph-pacific
 
 - name: Install common packages
   ansible.builtin.apt:
