--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -56,20 +56,19 @@ spec:
         existingClaim: plex-config-v1
       media:
         enabled: true
-        existingClaim: cephfs-media-pvc
+        type: hostPath
+        hostPath: /mnt/media
         mountPath: /media
         readOnly: true
       # backup:
       #   enabled: true
-      #   type: pvc
+      #   type: custom
       #   volumeSpec:
-      #     - name: media
-      #       persistentVolumeClaim:
-      #       claimName: cephfs-media-pvc
+      #     nfs:
+      #       server: "expanse.${SECRET_PRIVATE_DOMAIN}"
+      #       path: /tycho/Apps/External/Backups/plex
       #   mountPath: /config/Backups
       #   readOnly: false
-      #   accessMode: ReadWriteMany
-      #   size: 100Gi
       transcode:
         enabled: true
         type: emptyDir
@@ -83,6 +82,8 @@ spec:
     #               operator: In
     #               values:
     #                 - "true"
+    podAnnotations:
+      configmap.reloader.stakater.com/reload: "plex-promtail"
     # resources:
     #   requests:
     #     gpu.intel.com/i915: 1
