--- a/cluster/apps/kasten-io/k10/kustomization.yaml
+++ b/cluster/apps/kasten-io/k10/kustomization.yaml
@@ -4,6 +4,5 @@ kind: Kustomization
 resources:
   - helm-release.yaml
   - monitoring
-  # - blueprints
+  - blueprints
   - profiles
-  # - policies
