--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -3,10 +3,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - gaps
-  # - lidarr
+  - lidarr
   # - media-browser
   - overseerr
-  - plex
+  # - plex
   # - prowlarr
   # - qbittorrent
   # - radarr
