--- a/cluster/apps/media/lidarr/helm-release.yaml
+++ b/cluster/apps/media/lidarr/helm-release.yaml
@@ -64,19 +64,14 @@ spec:
         existingClaim: lidarr-config-v1
       media:
         enabled: true
-        type: custom
-        volumeSpec:
-          nfs:
-            server: "expanse.${SECRET_PRIVATE_DOMAIN}"
-            path: /tycho/Media
+        type: hostPath
+        hostPath: /mnt/media/music
         mountPath: /media
+        readOnly: true
       backup:
         enabled: true
-        type: custom
-        volumeSpec:
-          nfs:
-            server: "expanse.${SECRET_PRIVATE_DOMAIN}"
-            path: /tycho/Apps/External/Backups/lidarr
+        type: hostPath
+        hostPath: /mnt/media/backups/lidarr
         mountPath: /config/Backups
         readOnly: false
     resources:
