feat: add media-browser

--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - gaps
   - lidarr
-  # - media-browser
+  - media-browser
   - overseerr
   # - plex
   # - prowlarr
