feat: add prowlarr

--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - media-browser
   - overseerr
   # - plex
-  # - prowlarr
+  - prowlarr
   # - qbittorrent
   # - radarr
   # - radarr-uhd
