--- a/cluster/apps/media/prowlarr/helm-release.yaml
+++ b/cluster/apps/media/prowlarr/helm-release.yaml
@@ -46,11 +46,8 @@ spec:
         existingClaim: prowlarr-config-v1
       backup:
         enabled: true
-        type: custom
-        volumeSpec:
-          nfs:
-            server: "expanse.${SECRET_PRIVATE_DOMAIN}"
-            path: /tycho/Apps/External/Backups/prowlarr
+        type: hostPath
+        hostPath: /mnt/media/backups/prowlarr
         mountPath: /config/Backups
         readOnly: false
     resources:
