feat: enable qbitorrent

--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - overseerr
   # - plex
   - prowlarr
-  # - qbittorrent
+  - qbittorrent
   # - radarr
   # - radarr-uhd
   # - readarr
