--- a/cluster/apps/media/tautulli/helm-release.yaml
+++ b/cluster/apps/media/tautulli/helm-release.yaml
@@ -48,12 +48,9 @@ spec:
         existingClaim: tautulli-config-v1
       backup:
         enabled: true
-        type: custom
-        volumeSpec:
-          nfs:
-            server: "expanse.${SECRET_PRIVATE_DOMAIN}"
-            path: /tycho/Apps/External/Backups/tautulli
-        mountPath: /config/backups
+        type: hostPath
+        hostPath: /mnt/media/backups/tautilli
+        mountPath: /config/Backups
         readOnly: false
     resources:
       requests:
