feat: add sonarr-uhd

--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -14,7 +14,7 @@ resources:
   # - readarr
   # - sabnzbd
   # - sonarr
-  # - sonarr-uhd
+  - sonarr-uhd
   - tautulli
   # - trash-updater
   # - unpackerr
