--- a/cluster/apps/media/sonarr-uhd/helm-release.yaml
+++ b/cluster/apps/media/sonarr-uhd/helm-release.yaml
@@ -64,19 +64,14 @@ spec:
         existingClaim: sonarr-uhd-config-v1
       media:
         enabled: true
-        type: custom
-        volumeSpec:
-          nfs:
-            server: "expanse.${SECRET_PRIVATE_DOMAIN}"
-            path: /tycho/Media
+        type: hostPath
+        hostPath: /mnt/media/tv
         mountPath: /media
+        readOnly: true
       backup:
         enabled: true
-        type: custom
-        volumeSpec:
-          nfs:
-            server: "expanse.${SECRET_PRIVATE_DOMAIN}"
-            path: /tycho/Apps/External/Backups/sonarr-uhd
+        type: hostPath
+        hostPath: /mnt/media/backups/sonarr-uhd
         mountPath: /config/Backups
         readOnly: false
     resources:
