feat: add regular sonarr

--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -13,7 +13,7 @@ resources:
   # - radarr-uhd
   # - readarr
   # - sabnzbd
-  # - sonarr
+  - sonarr
   - sonarr-uhd
   - tautulli
   # - trash-updater
