--- a/cluster/apps/media/readarr/helm-release.yaml
+++ b/cluster/apps/media/readarr/helm-release.yaml
@@ -49,19 +49,14 @@ spec:
         existingClaim: readarr-config-v1
       media:
         enabled: true
-        type: custom
-        volumeSpec:
-          nfs:
-            server: "expanse.${SECRET_PRIVATE_DOMAIN}"
-            path: /tycho/Media
+        type: hostPath
+        hostPath: /mnt/media/books
         mountPath: /media
+        readOnly: true
       backup:
         enabled: true
-        type: custom
-        volumeSpec:
-          nfs:
-            server: "expanse.${SECRET_PRIVATE_DOMAIN}"
-            path: /tycho/Apps/External/Backups/readarr
+        type: hostPath
+        hostPath: /mnt/media/backups/readarr
         mountPath: /config/Backups
         readOnly: false
     resources:
