--- a/cluster/apps/media/radarr-uhd/helm-release.yaml
+++ b/cluster/apps/media/radarr-uhd/helm-release.yaml
@@ -64,19 +64,14 @@ spec:
         existingClaim: radarr-uhd-config-v1
       media:
         enabled: true
-        type: custom
-        volumeSpec:
-          nfs:
-            server: "expanse.${SECRET_PRIVATE_DOMAIN}"
-            path: /tycho/Media
+        type: hostPath
+        hostPath: /mnt/media
         mountPath: /media
+        readOnly: true
       backup:
         enabled: true
-        type: custom
-        volumeSpec:
-          nfs:
-            server: "expanse.${SECRET_PRIVATE_DOMAIN}"
-            path: /tycho/Apps/External/Backups/radarr-uhd
+        type: hostPath
+        hostPath: /mnt/media/backups/readarr
         mountPath: /config/Backups
         readOnly: false
     resources:
