--- a/cluster/apps/media/sabnzbd/helm-release.yaml
+++ b/cluster/apps/media/sabnzbd/helm-release.yaml
@@ -56,12 +56,10 @@ spec:
         existingClaim: sabnzbd-config-v1
       media:
         enabled: true
-        type: custom
-        volumeSpec:
-          nfs:
-            server: "expanse.${SECRET_PRIVATE_DOMAIN}"
-            path: /tycho/Media
+        type: hostPath
+        hostPath: /mnt/media
         mountPath: /media
+        readOnly: true
     resources:
       requests:
         memory: 250Mi
