--- a/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -63,17 +63,17 @@ spec:
         tls:
           - hosts:
               - *host
-    metrics:
-      enabled: true
-      exporter:
-        image:
-          repository: ghcr.io/k8s-at-home/prometheus-qbittorrent-exporter
-          tag: v1.2.0
-      serviceMonitor:
-        interval: 1m
-        scrapeTimeout: 10s
-      prometheusRule:
-        enabled: true
+    # metrics:
+    #   enabled: true
+    #   exporter:
+    #     image:
+    #       repository: ghcr.io/k8s-at-home/prometheus-qbittorrent-exporter
+    #       tag: v1.2.0
+    #   serviceMonitor:
+    #     interval: 1m
+    #     scrapeTimeout: 10s
+    #   prometheusRule:
+    #     enabled: true
     podSecurityContext:
       supplementalGroups:
         - 100
