--- a/cluster/apps/kasten-io/k10/profiles/secret.sops.yaml
+++ b/cluster/apps/kasten-io/k10/profiles/secret.sops.yaml
@@ -25,8 +25,59 @@ sops:
             OGp5ZWN4WkhjbFVEVkRURlI4d0VzZnMKAZOh+hs01tWUao4zHEGFV1THw4RCr9eH
             stP+QDB0fIOtZ+eTcbxhoU1n6ZY4/WkGC0PAnaVmP0bZ/c9dKLT+hw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-30T15:19:05Z"
-    mac: ENC[AES256_GCM,data:SLui+N+1z/gV2xlpcjcEokggKiT1oDWWSlSe3v0s6QevnBzfpkwTu4lDNaCaMHw3YfZ+mfpFPRAq/USm8HQfdMBQSLmaHw6nQmi4//g6M9bNGOFG1hxTj+4WyG3jfwRRrUikYQHvW4MkDw8py3zqFtPq4JbtH7GIeypslGf7K3M=,iv:Ru1wpeRu0uFyy0aVyQEJtPuG/OttHKGtro4UB4SMceM=,tag:cMih+ZtrZx3Aj91dWGZ/aQ==,type:str]
+    lastmodified: "2022-04-04T22:02:37Z"
+    mac: ENC[AES256_GCM,data:iWN3Flyc48d9fy2iC2T8icsZ7yyOBsEhvIKIXl7CAk8txNgI8xdPGcyRAcLzUDw4bDA2oFYDD39OyCubfrU1KjM5ewYGoWpMPi4xOrd8g2Xtq78EmF/fzRDFAbMkf7EWNKsbAIzFlV6eZk4JJ99Q1jocBSQ4J0Lvu1qGAoZlvRQ=,iv:5c+j5bGsM3qbMwt/bjk/NynIyZqvnPxNbFxJTseiFFg=,tag:ssfDTK6/G2h/r8D2pAJx5g==,type:str]
+    pgp:
+        - created_at: "2022-03-30T15:18:25Z"
+          enc: |
+            -----BEGIN PGP MESSAGE-----
+            hQIMAyQ1SH08BnVLAQ//UUUCInodzW7ehGxndTJSdEuuJ6YjnHGTsA8mf41iKquP
+            X7RjDYRdW6xvO9QG/ncfnenF7xSMyLadoL9RB1DcgyB3cIGw7LCmwfC/M/03Kvki
+            989X/IFPVL5WA8bShLiZd2cyjefm3AOiPPjpVBRfkiaJXMyLtgxcU86aE4Fe5gRI
+            93+Vu4bNZ8pyL06t33u7H0CFvw3Sdml2FmSD+XkeoJfpjBfQd6IRbCW8ZoJEl0IO
+            X3dUKGhUdUuUVpU7gvp1lBAC+BAFuFOK2bNGZ2x1IAuiboo868z7/M41nMUgDcyr
+            I9v4Vd1+0667qTVAjcR1ma3JGMNvJ2b20PoGFJtpLzsfKEQKFQmbjQzDqOXB3w3n
+            v6qIaKSRqHH/JadLWjIC+K+/TMtGrPuEU4Qdoz3bNafdasHqGI5B6HmgDsxGsr0E
+            1otFwYSzx/SfZLxds//FZbWQjEaxadYi2LhNsCZtCwCkredBGrfkBYroUiIlqiB3
+            q/ltHDTxflX4us1pD+XoXxI+xrYs176WUymnYks1G0lxOTWFdwBkYgoNJjKT9Qra
+            O4LavCthydFLUTCEitbUcEZtNLGzCtI1/9GAUzm9nNAM1CPEND9lygLpj15tWyXI
+            rHSPN3HXj/77lyG8+H+cEQQHc5Dkv42GdOTBGvjdmWUmCb0L2ePPiH5RpQJVGVbS
+            XAETat1O/XKfcgJ4XuSNUvyl43w3QCHF/CVnpLq7jjtvFtWwMFEuDRC+k3HTYbmY
+            oxynGdRXYvcFZlswzHnXJG0AfWQV7+zfCUdBxIy2YunEaxhfaAE//oLbzIwI
+            =gYMS
+            -----END PGP MESSAGE-----
+          fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
+    encrypted_regex: ^(data|stringData)$
+    version: 3.7.2
+---
+apiVersion: v1
+kind: Secret
+metadata:
+    name: k10-dr-secret
+    namespace: kasten-io
+stringData:
+    key: ENC[AES256_GCM,data:Ee71oWUoBjV/zuq7gQ==,iv:SFEFO8swv7mUdkYaGPsoLiNhqkWKt2A4lKjEDALxjvk=,tag:gmsjYlUL/D/RXFdMrQGLPw==,type:str]
+type: secrets.kanister.io/aws
+sops:
+    kms: []
+    gcp_kms:
+        - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+          created_at: "2022-03-30T15:18:25Z"
+          enc: CiQA1r6bIHgpi2S2CdqBn4Tm9x4m9msCihf4s7LORRajb/mcFDcSSQCbI6ie2Kg79Ku1z9N9c5q73KmZDEEqs/s0+X89kT16oNGo1+5o3/N2qAtsdTwJS29I5EpbN8Yv8kmEoNNNxZ4TTWl0MIgDz7M=
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1ms2d7n4yhaq0mdap4cfyaq2xtfutlachqapkjfr0z2qr7ghc2ckq000jhm
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2QkNLNG5WTVZoTGg1VWRs
+            cGdhUGxqU2NTdmYzVTd4Zlp3SUNQaXcvTlhRCk1TenlWVTNLVlo3UUhlVnZTb2Nn
+            NENERmUra1VhU2JCSnNQeTZnWjV5M3MKLS0tIHhXM3gxU2tHMmxxYTNTNStSbEpX
+            OGp5ZWN4WkhjbFVEVkRURlI4d0VzZnMKAZOh+hs01tWUao4zHEGFV1THw4RCr9eH
+            stP+QDB0fIOtZ+eTcbxhoU1n6ZY4/WkGC0PAnaVmP0bZ/c9dKLT+hw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2022-04-04T22:02:37Z"
+    mac: ENC[AES256_GCM,data:iWN3Flyc48d9fy2iC2T8icsZ7yyOBsEhvIKIXl7CAk8txNgI8xdPGcyRAcLzUDw4bDA2oFYDD39OyCubfrU1KjM5ewYGoWpMPi4xOrd8g2Xtq78EmF/fzRDFAbMkf7EWNKsbAIzFlV6eZk4JJ99Q1jocBSQ4J0Lvu1qGAoZlvRQ=,iv:5c+j5bGsM3qbMwt/bjk/NynIyZqvnPxNbFxJTseiFFg=,tag:ssfDTK6/G2h/r8D2pAJx5g==,type:str]
     pgp:
         - created_at: "2022-03-30T15:18:25Z"
           enc: |
