fix: change secrets

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -10,12 +10,11 @@ stringData:
     SECRET_GRAFANA_PASSWORD: ENC[AES256_GCM,data:zkpE8PKI/2si3ZwkTw==,iv:t9EYCs7N7YbVqtq6GMDUytazClH08RT4w5uD4swGho0=,tag:sgivAkgfq9H3he3+9GZD+w==,type:str]
     SECRET_KASTEN_BUCKET_PATH: ENC[AES256_GCM,data:bMER47cY4mNWW3aKKgppGVKjizH4ciz9K3FlIbUXM5zI5EdG7Xq4snAINoKnitvHknc=,iv:1QacuI87g41RXtWIu5g8DnAp5a6JjriJmM/BTBqQKnY=,tag:Y+LraoIlWNTFiZpujoKHLg==,type:str]
     SECRET_KASTEN_BUCKET: ENC[AES256_GCM,data:AezL6FDCHg==,iv:8b0QOwrs9iEJ8k11cO9MbnR4KLE9dDT+RrT+IpwmXlY=,tag:2NHWkTORXct7gUepRgVXYg==,type:str]
-    SECRET_KURED_DISCORD_WEBHOOK: ENC[AES256_GCM,data:g3Fsfw==,iv:Kh/2+8gCNVUP8xkN9B8u27wJ1eqttkE4UWSEaI7Qv2A=,tag:Cx2ruNX63bCkiEDJ4vlHAg==,type:str]
     SECRET_LOKI_ACCESS_KEY: ENC[AES256_GCM,data:a7mbL2+nVSdFgBy8EHQGH8/ZroHkpErIXQ==,iv:1pwhHJAjXOnD68MVEMG9rweNLZWf0RuoFr86A5Wcb4c=,tag:cDVsj52f8R/XsBLk98mhlg==,type:str]
     SECRET_LOKI_BUCKET: ENC[AES256_GCM,data:oTjdUOXNa4A=,iv:3lBSTgwCYMXeUjoTtx9Z7pArdha1CAau+0QRucq9m/o=,tag:aGRx9xYdfrSYKKAV8Fi2gA==,type:str]
     SECRET_LOKI_SECRET_KEY: ENC[AES256_GCM,data:bWtqSS0qbN2oh23qTIYauJI678CxKQuL30+Mk7fdYA==,iv:3/3/8IebRrPHV8zrZri59zca/D2j6IUeldUe8ZNVU/U=,tag:NfKIMvambbLam8Jvs+rdtA==,type:str]
-    SECRET_MQTT_PASSWORD: ENC[AES256_GCM,data:Ip7jJA==,iv:g3oSOa/XNKqBUOKWieSLRMDnlj3mxZNx9H/2DPRX5iA=,tag:BPKVsMznJKT3io/a5Awi8A==,type:str]
-    SECRET_MQTT_USERNAME: ENC[AES256_GCM,data:qrXy1w==,iv:dbb05m9bxsQZK5atRMGwzP0Wom6ur2nZPVtgz83dWTc=,tag:B3teERadVs9WglQs9twLhg==,type:str]
+    SECRET_MQTT_PASSWORD: ENC[AES256_GCM,data:w0aLm/NzK499LYooTw==,iv:n0cLJbLm9ANH4cr6zOC1S8o0AjLC2Ysy/tFJH9Ue0WY=,tag:aJlWfUaHKK9cjtgcLR58Mw==,type:str]
+    SECRET_MQTT_USERNAME: ENC[AES256_GCM,data:BR/GzXlWE/17U6+30Q==,iv:/s8ejzX70Z2P7aHbX+5uCB0yaFqtNs1QclLRIdk/Lsw=,tag:wKHhO1KJD/FZH+zSvT6tww==,type:str]
     SECRET_PRIVATE_DOMAIN: ENC[AES256_GCM,data:N3AIRKMc3m+vbo1QR+1noP0=,iv:FvhnK4I6HUVyx/eNCt6YE0e8abi1JYEpsellEmvS39c=,tag:63AxFbPl+JthkfhdE1SG8Q==,type:str]
     SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:0w7RSIUxgEP7EVUwwg==,iv:lkWW74lKYUsfPBDMvclms4Y6t/rx2emH9DfurI5cxYs=,tag:Xtn99Ds9Iz9pmrGJTw/sWA==,type:str]
     SECRET_S3_DOMAIN: ENC[AES256_GCM,data:iF2rQq90lZU8jAgb/NenyqWKLYJmnHeTwtQj,iv:FcYlX/1EtbvYbGp4O3o8XujVlxx7KX20I53G4HdpRM8=,tag:rfpPoIdBJaeMA6j2k8liTQ==,type:str]
@@ -41,8 +40,8 @@ sops:
             bEthME45cnI4MGdEZ2VYRlk3aU1qdjgKUnHIHQSP3gi1jJK9bnKrXzc97dsDtisN
             HgRS5n9Eau1vrjuqsQd49Fypgys2zXpYsd+60kkxv/VTKZm9tWjkKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-30T19:01:03Z"
-    mac: ENC[AES256_GCM,data:XtmR1JzW8StTJ+LgK2c5t96BNCzn49Up64Z4gOwRisjct4pFuskinRiYl8IZB7b91i5vGw6wb1Z3b9U7yfLKL5oXLN/JDcuh/PlxrPMif+NhVhyo1gK+tzKR/dbgwM0xJOP38UrKxhUd9TE1NNvt3HN/1LEpFfp3M0FA12oXRjQ=,iv:FTB1fXCYnLF3vsSAokyLp6TqGUzG2mAKG7fA65C3xzU=,tag:AlR1mf/rZR8BCTLROfWMxg==,type:str]
+    lastmodified: "2022-04-05T16:19:35Z"
+    mac: ENC[AES256_GCM,data:a4X/LoLzExXt3QibN3Pw3FjPCc7ouG9ymw1MQGuanPbeCYEa+YOATJANdiFOUB7ADUsO8+tqjTwhAzcSOG9zYykrmyC8gu/DlLI7vNTkpjB/ywMSUr+u8mhmWHXn1re/ib3895pqAynWny7fLG/z2KN+jm97b6bnR84/OLDv0fg=,iv:wjrncmmusiUZPUSLMuNFyhpsodzjEmitiof1TuAdiq4=,tag:c3hF0ZUuYe1ntcoK/798xw==,type:str]
     pgp:
         - created_at: "2022-03-21T15:38:08Z"
           enc: |
