fix: update location

--- a/cluster/apps/home/home-assistant/home-assistant.sops.yaml
+++ b/cluster/apps/home/home-assistant/home-assistant.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     name: home-assistant
     namespace: home
 stringData:
-    HASS_ELEVATION: ENC[AES256_GCM,data:fftUCA==,iv:HKZ0YI4fRmekM8MCR1kLmiVGO6Cn5vZbdiJ/ASuj4W4=,tag:5nEJvoiEz8a/FcCtNNXY9w==,type:str]
-    HASS_LATITUDE: ENC[AES256_GCM,data:HTPQWw==,iv:v1APsUJnIa4b0d6ku9ygW/2IBDa2UCTa02//cz7gFgA=,tag:i+xT9Z9mgasANydrCuDW7Q==,type:str]
-    HASS_LONGITUDE: ENC[AES256_GCM,data:SATgCQ==,iv:FFueBTf/igtScBkw9tAz/FINCg5eb1mEd66IQNDw1/k=,tag:M22m5QUQsr0qXfJvTJVG4A==,type:str]
+    HASS_ELEVATION: ENC[AES256_GCM,data:UzJu,iv:HIUKhbyqbMXfF5RevVp1+pibRh2n8dtpo8w4nFLcPD4=,tag:IbQPPU1bbx+pGYnWfcQVMg==,type:str]
+    HASS_LATITUDE: ENC[AES256_GCM,data:e9Be1ww=,iv:I1Uauf3D95AF6Lm5a8SK/g4XZOSqQQ6LMYjxGM09Lrw=,tag:6i1VbVpTjuGlJRa13O7SPQ==,type:str]
+    HASS_LONGITUDE: ENC[AES256_GCM,data:neTlgi0=,iv:/kc/13rmo4QCVU9PAqh5O9GsPlHPPdSfUmqfPk3iXxI=,tag:ti7LcQQtWTYQnJ8GVIG2mw==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -26,8 +26,8 @@ sops:
             ZzZKazdYbWY5amhXcTRFYmM0WW9Id3MKG5Rydz0i5TL8mhsQNLAQWfuecMbELKD4
             1mApI/KZWIzd+MgOFWShKpxh9j6o9XV+0w3u77NHv7wBv+ko1YzSAg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-26T22:25:16Z"
-    mac: ENC[AES256_GCM,data:piUjaR4veZnQ6MxEMvFpn67PbqJJ87HCLP6ELFdilEvGvWvgjs2nVIUWYe8hIwUVm5is/GoLuZOziZjBnollD0txKoKvx/ZGA2fmaUJjW8mfTauuUcY77wDgOOU8Qk+Xf2IstZtPbTrwzokNdWWa1uDncTc9kKxzRTiISz5JxWQ=,iv:kXQLIvmEGypYuJYS5cjTjq5Z+susjeHKX5dmhXuKug0=,tag:eUTZjS0VWhpAXSEbYfleHA==,type:str]
+    lastmodified: "2022-04-05T16:42:46Z"
+    mac: ENC[AES256_GCM,data:LoK88pR/7iodmNHufwxiPmI2Dl+t7cahil6AcNxgc2BGT2veWUBI6z6wTeP0itN+PXjYmoKFU76/xBYbV907+r2W73ei3u2ONnyK9MUZLChTWuFg9iOutdO8PQxuaCJ7Or2SukLmRQMc+jjPbn701zyE0jF9Z+n1vRj0TwwXUBE=,iv:VJ3GuMdqu7SQtZO6xtIhLHELnd+FdiaKXU6cO2Shz3A=,tag:r0d1TzDnou0PbTnhHuVOrA==,type:str]
     pgp:
         - created_at: "2022-03-26T18:42:27Z"
           enc: |
